# SLAM-Kataoka

./: Readme.md
source/: CMakeLists.txt  PointcloudBasic.cpp
source/include_FPFH/: CMakeLists.txt  FPFH_PCL.cpp  FPFH_PCL.h
source/include_GlobalFeatureRegistration/: CMakeLists.txt  GlobalFeatureRegistration.cpp  GlobalFeatureRegistration.h
source/include_ICP/: CMakeLists.txt  Convergence_ExtendableICP.h  Correspondence_ExtendableICP.h  ExtendableICP.cpp  ExtendableICP.h  KataokaConvergence.cpp  KataokaConvergence.h  KataokaCorrespondence.h  KataokaPCL.cpp  KataokaPCL.h
source/include_PointcloudBasic/: CMakeLists.txt  PointcloudBasic.cpp  PointcloudBasic.h
source/include_PointcloudBasicProcess/: CMakeLists.txt  PointVisualization.h  PointcloudBasicProcess.cpp  PointcloudBasicProcess.h
source/include_PointcloudFunction/: CMakeLists.txt  PointVisualization.h  PointcloudFunction.cpp  PointcloudFunction.h
source/include_RobotState/: CMakeLists.txt  RobotState.cpp  RobotState.h
source/include_TimeString/: CMakeLists.txt  TimeString.cpp  TimeString.h
source/test_02ICPWithFeature/: CMakeLists.txt  main.cpp  test_ICPWithFeature.cpp  test_ICPWithFeature.h
source/test_03GlobalFeatureRegistration/: CMakeLists.txt  GlobalFeatureRegistration.cpp  GlobalFeatureRegistration.h  PointcloudBasic.h  main.cpp  test_GlobalFeatureRegistration.cpp  test_GlobalFeatureRegistration.h
source/test_GlobalRegistration/: CMakeLists.txt  main.cpp  test_GlobalRegistration.cpp
source/test_HandRegistration/: CMakeLists.txt  HandRegistration.cpp  HandRegistration.h  Readme.md  main.cpp  test_HandRegistration.cpp
source/test_PointcloudFunction/: CMakeLists.txt  GlobalFeatureRegistration.cpp  main.cpp  test_PointcloudFunction.cpp
source/test_PointcloudGeneration/: CMakeLists.txt  PointcloudGeneration.cpp  PointcloudGeneration.h  main.cpp
source/test_SLAM/: CMakeLists.txt  SLAM_Kataoka.cpp  SLAM_Kataoka.h  main.cpp
